deploy/namespaces/airflow/ingress/02-airflow-ui-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: airflow-ui
  namespace: airflow
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`airflow.lan`)
      kind: Rule
      middlewares:
        - name: lan-only
          namespace: airflow 
      services:
        - name: airflow-api-server
          port: 8080
